--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "id": "ec0b7c8d-2157-476b-bf16-8c3f36a36997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/private/users/{username}/x509up_u2239311\"\n",
+    "os.environ[\"PYTHONPATH\"] += f\":/depot/cms/users/{username}/copperheadV2/\"\n",
+    "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "275494e4-3a0f-4d26-aafe-8abd771df5b4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
+   "id": "78e6564b-e289-4d3d-9270-13da79dd0c91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username: shar1172\n"
+     ]
+    }
+   ],
+   "source": [
+    "username = os.environ.get(\"USER\") or os.environ.get(\"USERNAME\")\n",
+    "if username:\n",
+    "    print(f\"Username: {username}\")\n",
+    "else:\n",
+    "    print(\"Username not found in environment variables.\")\n",
+    "    sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "b2eb73e1-4c0e-476d-864e-f781b0a331bc",
    "metadata": {},
    "outputs": [],
@@ -29,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -40,15 +75,12 @@
    },
    "outputs": [],
    "source": [
-    "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/private/users/shar1172/x509up_u2239311\"\n",
-    "os.environ[\"PYTHONPATH\"] += \":/depot/cms/users/shar1172/copperheadV2/\"\n",
-    "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\"\n",
     "cluster = gateway.new_cluster(\n",
     "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
     "    # conda_env = \"/depot/cms/kernels/root632\",\n",
     "    conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
     "    worker_cores = 2, #1\n",
-    "    worker_memory = 6, #6\n",
+    "    worker_memory = 10, #6\n",
     "    env = dict(os.environ),\n",
     ")\n",
     "\n",
@@ -57,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "f281193a-6e0d-44f9-8edd-34bb49454eab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2490348428c4cc8aac47f0d21d5f5e8",
+       "model_id": "dbd2d7af3b524f04bf9a8f26c09cd5b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "d6fc0cd8-29ba-4552-b3e4-e81539318878",
    "metadata": {},
    "outputs": [
@@ -91,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ClusterReport<name=cms.243fb482b73146018e726148399c405a, status=RUNNING>\n"
+      "ClusterReport<name=cms.b313c18b598f4652ab1d11a6c309d697, status=RUNNING>\n"
      ]
     }
    ],
@@ -102,36 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7bb7fe43-762d-4c18-beee-5475285989fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2ff0a848-13af-4176-8b20-fd6c4e53c3f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/shar1172'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.environ['PWD']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "7509afd5-e613-4dad-99f0-ebcda0453090",
    "metadata": {},
    "outputs": [],
@@ -148,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "3d015374-9431-4718-9eb3-a37a00bb367f",
    "metadata": {},
    "outputs": [],
@@ -159,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "61b1a67a-53d2-4837-b5c4-2fd124dd128f",
    "metadata": {},
    "outputs": [],
@@ -177,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<dask_gateway.options.Options object at 0x7f59042a3e90>\n"
+      "<dask_gateway.options.Options object at 0x7fb727722950>\n"
      ]
     }
    ],
