Fix the 2016pre/post key error; Improved the stage1_loop.sh

--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -2,35 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ec0b7c8d-2157-476b-bf16-8c3f36a36997",
+   "execution_count": 1,
+   "id": "79fcd8c1-2264-45ac-bf9d-58da85349dba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/private/users/{username}/x509up_u2239311\"\n",
-    "os.environ[\"PYTHONPATH\"] += f\":/depot/cms/users/{username}/copperheadV2/\"\n",
-    "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\""
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "275494e4-3a0f-4d26-aafe-8abd771df5b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from dask_gateway import Gateway\n",
-    "# gateway = Gateway()\n",
-    "gateway = Gateway(\n",
-    "    \"http://dask-gateway-k8s.geddes.rcac.purdue.edu/\",\n",
-    "    proxy_address=\"traefik-dask-gateway-k8s.cms.geddes.rcac.purdue.edu:8786\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "78e6564b-e289-4d3d-9270-13da79dd0c91",
    "metadata": {},
    "outputs": [
@@ -53,7 +35,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
+   "id": "ec0b7c8d-2157-476b-bf16-8c3f36a36997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/private/users/{username}/x509up_u2239311\"\n",
+    "os.environ[\"PYTHONPATH\"] += f\":/depot/cms/users/{username}/copperheadV2/\"\n",
+    "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "275494e4-3a0f-4d26-aafe-8abd771df5b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask_gateway import Gateway\n",
+    "# gateway = Gateway()\n",
+    "gateway = Gateway(\n",
+    "    \"http://dask-gateway-k8s.geddes.rcac.purdue.edu/\",\n",
+    "    proxy_address=\"traefik-dask-gateway-k8s.cms.geddes.rcac.purdue.edu:8786\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b2eb73e1-4c0e-476d-864e-f781b0a331bc",
    "metadata": {},
    "outputs": [],
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -89,14 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "f281193a-6e0d-44f9-8edd-34bb49454eab",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/kernels/coffea_latest/lib/python3.11/site-packages/dask_gateway/client.py:702: GatewayWarning: Adapt with `maximum=100, minimum=3` workers would exceed resource limit of 80 workers. Using `maximum=80, minimum=3` instead.\n",
+      "  warnings.warn(GatewayWarning(msg[\"msg\"]))\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbd2d7af3b524f04bf9a8f26c09cd5b8",
+       "model_id": "c345f879abb9485f983286b244a4fe3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "d6fc0cd8-29ba-4552-b3e4-e81539318878",
    "metadata": {},
    "outputs": [
@@ -123,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ClusterReport<name=cms.b313c18b598f4652ab1d11a6c309d697, status=RUNNING>\n"
+      "ClusterReport<name=cms.b521ec63267c40c383da85e52923431f, status=RUNNING>\n"
      ]
     }
    ],
