--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -35,12 +35,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "42007ac8-c747-4d27-965f-0fcbe23ceeaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/shar1172\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.environ.get(\"PWD\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "ec0b7c8d-2157-476b-bf16-8c3f36a36997",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/private/users/{username}/x509up_u2239311\"\n",
+    "os.environ[\"X509_USER_PROXY\"] = f\"/depot/cms/private/users/{username}/x509up_u2239311\"\n",
     "os.environ[\"PYTHONPATH\"] += f\":/depot/cms/users/{username}/copperheadV2/\"\n",
     "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\""
    ]
@@ -73,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -82,30 +100,11 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "cluster = gateway.new_cluster(\n",
-    "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
-    "    # conda_env = \"/depot/cms/kernels/root632\",\n",
-    "    conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
-    "    worker_cores = 2, #1\n",
-    "    worker_memory = 6, #6\n",
-    "    env = dict(os.environ),\n",
-    ")\n",
-    "\n",
-    "# cluster.adapt(100) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "f281193a-6e0d-44f9-8edd-34bb49454eab",
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed246516f9254f198edca2347c6ef709",
+       "model_id": "f4b5905212bf41fe95a10896d17722af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,13 +117,23 @@
     }
    ],
    "source": [
+    "cluster = gateway.new_cluster(\n",
+    "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
+    "    # conda_env = \"/depot/cms/kernels/root632\",\n",
+    "    conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
+    "    worker_cores = 2, #1\n",
+    "    worker_memory = 10, #6\n",
+    "    env = dict(os.environ),\n",
+    ")\n",
+    "\n",
     "cluster.adapt(minimum=3, maximum=80)\n",
-    "cluster"
+    "cluster\n",
+    "# cluster.adapt(100) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "d6fc0cd8-29ba-4552-b3e4-e81539318878",
    "metadata": {},
    "outputs": [
@@ -132,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ClusterReport<name=cms.14fe2eda5e1f41bd9764df9d8509cbff, status=RUNNING>\n"
+      "ClusterReport<name=cms.f82c3fe23a2c474aa4c46df85d14ff50, status=RUNNING>\n"
      ]
     }
    ],
@@ -143,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "7509afd5-e613-4dad-99f0-ebcda0453090",
    "metadata": {},
    "outputs": [],
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3d015374-9431-4718-9eb3-a37a00bb367f",
    "metadata": {},
    "outputs": [],
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "61b1a67a-53d2-4837-b5c4-2fd124dd128f",
    "metadata": {},
    "outputs": [],
@@ -181,18 +190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "add5c117-7590-4546-8fe6-239cab13dd36",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<dask_gateway.options.Options object at 0x7fb727722950>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# options.worker_cores\n",
     "print(options)"
@@ -200,18 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e627d976-e8ae-4d2f-974a-757ea14acf87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! squeue -u shar1172"
    ]
