add pwd functionality in DaskGateway

--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "79fcd8c1-2264-45ac-bf9d-58da85349dba",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "78e6564b-e289-4d3d-9270-13da79dd0c91",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Username: shar1172\n"
+      "Username: yun79\n"
      ]
     }
    ],
@@ -35,31 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "42007ac8-c747-4d27-965f-0fcbe23ceeaf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/shar1172\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(os.environ.get(\"PWD\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "ec0b7c8d-2157-476b-bf16-8c3f36a36997",
    "metadata": {},
    "outputs": [],
    "source": [
     "os.environ[\"X509_USER_PROXY\"] = f\"/depot/cms/private/users/{username}/x509up_u2239311\"\n",
-    "os.environ[\"PYTHONPATH\"] += f\":/depot/cms/users/{username}/copperheadV2/\"\n",
+    "cwd = str(Path.cwd())\n",
+    "os.environ[\"PYTHONPATH\"] += f\":{cwd}\"\n",
     "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\""
    ]
   },
