--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "79fcd8c1-2264-45ac-bf9d-58da85349dba",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "78e6564b-e289-4d3d-9270-13da79dd0c91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username: yun79\n"
+     ]
+    }
+   ],
    "source": [
     "username = os.environ.get(\"USER\") or os.environ.get(\"USERNAME\")\n",
     "if username:\n",
@@ -32,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "os.environ[\"X509_USER_PROXY\"] = f\"/depot/cms/private/users/{username}/x509up_u2239311\"\n",
     "cwd = str(Path.cwd())\n",
     "os.environ[\"PYTHONPATH\"] += f\":{cwd}\"\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -79,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4b5905212bf41fe95a10896d17722af",
+       "model_id": "1df604dbae914b6783a49c6a2c64b740",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,9 +103,9 @@
    "source": [
     "cluster = gateway.new_cluster(\n",
     "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
-    "    # conda_env = \"/depot/cms/kernels/root632\",\n",
-    "    conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
-    "    worker_cores = 2, #1\n",
+    "    conda_env = \"/depot/cms/kernels/root632\",\n",
+    "    # conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
+    "    worker_cores = 2, #2\n",
     "    worker_memory = 10, #6\n",
     "    env = dict(os.environ),\n",
     ")\n",
@@ -108,18 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "d6fc0cd8-29ba-4552-b3e4-e81539318878",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ClusterReport<name=cms.f82c3fe23a2c474aa4c46df85d14ff50, status=RUNNING>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for cluster_info in gateway.list_clusters():\n",
     "    print(cluster_info)"
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7509afd5-e613-4dad-99f0-ebcda0453090",
    "metadata": {},
    "outputs": [],
@@ -195,9 +196,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "coffea_latest",
+   "display_name": "Python [conda env:root632]",
    "language": "python",
-   "name": "coffea_latest"
+   "name": "conda-env-root632-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -209,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
