--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "79fcd8c1-2264-45ac-bf9d-58da85349dba",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "78e6564b-e289-4d3d-9270-13da79dd0c91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Username: yun79\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "username = os.environ.get(\"USER\") or os.environ.get(\"USERNAME\")\n",
     "if username:\n",
@@ -35,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ec0b7c8d-2157-476b-bf16-8c3f36a36997",
    "metadata": {},
    "outputs": [],
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "275494e4-3a0f-4d26-aafe-8abd771df5b4",
    "metadata": {},
    "outputs": [],
@@ -64,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b2eb73e1-4c0e-476d-864e-f781b0a331bc",
    "metadata": {},
    "outputs": [],
@@ -75,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -84,40 +76,25 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1df604dbae914b6783a49c6a2c64b740",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h2>GatewayCluster</h2>'), HBox(children=(HTML(value='\\n<div>\\n<style scoped>\\n    …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cluster = gateway.new_cluster(\n",
     "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
     "    conda_env = \"/depot/cms/kernels/root632\",\n",
     "    # conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
-    "    worker_cores = 2, #2\n",
-    "    worker_memory = 10, #6\n",
+    "    worker_cores = 1, #2\n",
+    "    worker_memory = 1, #6\n",
     "    env = dict(os.environ),\n",
     ")\n",
     "\n",
-    "cluster.adapt(minimum=3, maximum=80)\n",
+    "cluster.adapt(minimum=3, maximum=199) # 399 for low resources, otherwise 199\n",
     "cluster\n",
     "# cluster.adapt(100) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d6fc0cd8-29ba-4552-b3e4-e81539318878",
    "metadata": {},
    "outputs": [],
@@ -128,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7509afd5-e613-4dad-99f0-ebcda0453090",
    "metadata": {},
    "outputs": [],
@@ -196,9 +173,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root632]",
+   "display_name": "Python3 kernel (default)",
    "language": "python",
-   "name": "conda-env-root632-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -210,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
