- Updated the way we are reading input dataset in the pre-stage.py. - Updated the file name of pre-stage output json file and propagated to the stage1. - Cleaned part of stage1 - Added two separate yaml file having v9 adn v12 dataset names - Updated logger with rich - Updated copperhead_processor adapting with three functions for 2016postVFP. - Replaced print statements with logger. - Refactor zpt_validation_plotter.py to improve logging and update save path
- Updated default save path for plots to include 'UsingAcoplanarityWgt_CustomBins'.
- Enhanced error handling and logging for missing variables and unknown processes.

--- a/quick_tests/get_yields.ipynb
+++ b/quick_tests/get_yields.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "deb50695-99eb-4eff-a8e8-e9d7aa96b93a",
    "metadata": {
     "scrolled": true
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "15d0454e-03f9-4b86-8a28-02b3f03d1134",
    "metadata": {
     "scrolled": true
@@ -43,19 +43,8 @@
       "data_yield for /depot/cms/users/yun79/hmm/copperheadV1clean/V2_Jan29_JecOn_TrigMatchFixed_2016UlJetIdFix/stage1_output/2018/f1_0/data_A: 164265\n",
       "file: /depot/cms/users/yun79/hmm/copperheadV1clean/V2_Jan29_JecOn_TrigMatchFixed_2016UlJetIdFix/stage1_output/2018/f1_0/data_B\n",
       "data_yield for /depot/cms/users/yun79/hmm/copperheadV1clean/V2_Jan29_JecOn_TrigMatchFixed_2016UlJetIdFix/stage1_output/2018/f1_0/data_B: 83050\n",
-      "file: /depot/cms/users/yun79/hmm/copperheadV1clean/V2_Jan29_JecOn_TrigMatchFixed_2016UlJetIdFix/stage1_output/2018/f1_0/data_D\n",
-      "data_yield for /depot/cms/users/yun79/hmm/copperheadV1clean/V2_Jan29_JecOn_TrigMatchFixed_2016UlJetIdFix/stage1_output/2018/f1_0/data_D: 376773\n"
+      "file: /depot/cms/users/yun79/hmm/copperheadV1clean/V2_Jan29_JecOn_TrigMatchFixed_2016UlJetIdFix/stage1_output/2018/f1_0/data_D\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "705310"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -130,7 +119,16 @@
     "    # \"region\",\n",
     "    \"event\",\n",
     "]\n",
-    " \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca3d8d24-a3a6-4f7b-81d0-a1127b3624b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "year = \"2018\"\n",
     "label=\"V2_Jan29_JecOn_TrigMatchFixed_2016UlJetIdFix\"\n",
     "load_path =f\"/depot/cms/users/yun79/hmm/copperheadV1clean/{label}/stage1_output/{year}/f1_0\"\n",
@@ -162,23 +160,15 @@
     "    df = pd.DataFrame({field: ak.fill_none(events_data[field], value=-999.9) for field in events_data.fields})\n",
     "    print(f\"data_yield for {file}: {data_yield}\")\n",
     "    total_integral += data_yield\n",
-    "total_integral\n"
+    "total_integral"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca3d8d24-a3a6-4f7b-81d0-a1127b3624b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:coffea_latest]",
+   "display_name": "coffea_latest",
    "language": "python",
-   "name": "conda-env-coffea_latest-py"
+   "name": "coffea_latest"
   },
   "language_info": {
    "codemirror_mode": {
@@ -190,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
