--- a/quick_tests/quick_selection_test.ipynb
+++ b/quick_tests/quick_selection_test.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "id": "63f4c7f0-6b44-4da9-9de4-c4f89dc4bfdf",
    "metadata": {},
    "outputs": [],
@@ -131,14 +131,14 @@
     "# year = \"2016postVFP\"\n",
     "# load_path = \"/depot/cms/users/yun79/hmm/copperheadV1clean/test_test//stage1_output/2018/f1_0/cutflow_data_*\"\n",
     "# load_path = f\"/depot/cms/users/yun79/hmm/copperheadV1clean/cutflow_rereco_yun_Apr20//stage1_output/{year}/data_B\"\n",
-    "load_path = f\"/depot/cms/users/yun79/hmm/copperheadV1clean/test2//stage1_output/{year}/data_B\"\n",
+    "load_path = f\"/depot/cms/users/yun79/hmm/copperheadV1clean/test2//stage1_output/{year}/data_D\"\n",
     "filelist = glob.glob(f\"{load_path}/*.parquet\")\n",
     "ak_zip=dak.from_parquet(filelist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "5c5f61a6-db2b-4841-ac72-6b5e735a8832",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        " 'year']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "id": "e871cccf-8948-4271-8f3b-3cbcb4dc8161",
    "metadata": {
     "scrolled": true
@@ -186,16 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TotalEntries sum: 10020\n",
-      "LumiMaskMetFilterPv sum: 10005\n",
-      "HLT_filter sum: 8180\n",
-      "muon_base_selection sum: 481\n",
-      "muon_trig_match sum: 470\n",
-      "electron_veto sum: 469\n",
-      "Jet_selection_njetsLeq2 sum: 452\n",
-      "anti_ttH_btag_cut sum: 447\n",
-      "ggH_cut sum: 444\n",
-      "signal_fit_region sum: 10\n"
+      "year sum: 382375\n"
      ]
     }
    ],
@@ -209,7 +200,7 @@
     " 'muon_base_selection',\n",
     " 'muon_trig_match',\n",
     " 'electron_veto',\n",
-    " 'Jet_selection_njetsLeq2',\n",
+    " # 'Jet_selection_njetsLeq2',\n",
     " 'anti_ttH_btag_cut',\n",
     " 'ggH_cut',\n",
     " 'signal_fit_region',\n",
@@ -228,7 +219,8 @@
     "    arr = ak_zip[field]\n",
     "    # print(f\"{field} arr: {arr.compute()}\")\n",
     "    sig_region_arr = sig_region_arr & arr\n",
-    "    print(f\"{field} sum: {ak.sum(sig_region_arr).compute()}\")\n",
+    "    # print(f\"{field} sum: {ak.sum(sig_region_arr).compute()}\")\n",
+    "print(f\"{field} sum: {ak.sum(sig_region_arr).compute()}\")\n",
     "\n",
     "# sig_region_arr = ak.num(sig_region_arr, axis=0).compute()\n",
     "# sig_region_arr = ak.sum(sig_region_arr).compute()"
@@ -275,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "7ab1b7cd-7dea-43c6-961d-3354a74e8397",
    "metadata": {},
    "outputs": [
@@ -283,22 +275,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[True, True, True, True, True, True, True, True, True, True]\n",
+      "[35.3, 25.6, 0, 40.4, 0, 32.5, 41.2, 0, 0, 0]\n",
       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "[-1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n",
       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[35.3, 25.6, 0, 40.4, 0, 32.5, 41.2, 0, 0, 0]\n"
+      "[1, 1, 0, 1, 0, 1, 1, 0, 0, 0]\n"
      ]
     }
    ],
    "source": [
-    "print(ak_zip[\"ggH_cut\"][sig_region_arr].compute())\n",
+    "# print(ak_zip[\"ggH_cut\"][sig_region_arr].compute())\n",
+    "print(ak_zip[\"jet1_pt_nominal\"][sig_region_arr].compute())\n",
+    "\n",
     "print(ak_zip[\"jj_mass_nominal\"][sig_region_arr].compute())\n",
     "print(ak_zip[\"jj_dEta_nominal\"][sig_region_arr].compute())\n",
     "print(ak_zip[\"nBtagLoose_nominal\"][sig_region_arr].compute())\n",
     "print(ak_zip[\"nBtagMedium_nominal\"][sig_region_arr].compute())\n",
-    "print(ak_zip[\"jet1_pt_nominal\"][sig_region_arr].compute())\n",
     "print(ak_zip[\"njets_nominal\"][sig_region_arr].compute())\n"
    ]
   },
