--- a/quick_tests/get_yields.ipynb
+++ b/quick_tests/get_yields.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "deb50695-99eb-4eff-a8e8-e9d7aa96b93a",
    "metadata": {
     "scrolled": true
@@ -14,7 +14,7 @@
      "text": [
       "/depot/cms/kernels/coffea_latest/lib/python3.12/site-packages/distributed/node.py:187: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 45419 instead\n",
+      "Hosting the HTTP server on port 44787 instead\n",
       "  warnings.warn(\n"
      ]
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "15d0454e-03f9-4b86-8a28-02b3f03d1134",
    "metadata": {
     "scrolled": true
@@ -81,19 +81,10 @@
     "    btag_cut = (btagLoose_filter | btagMedium_filter)\n",
     "    vbf_cut = (events.jj_mass_nominal > 400) & (events.jj_dEta_nominal > 2.5) & (events.jet1_pt_nominal > 35) \n",
     "    vbf_cut = ak.fill_none(vbf_cut, value=False)\n",
-    "    dimuon_mass = events.dimuon_mass\n",
     "    ggH_filter = (\n",
     "        ~vbf_cut & \n",
     "        ~btag_cut # btag cut is for VH and ttH categories\n",
     "    )\n",
-    "    print(f\"events.jet1_pt_nominal : {events.jet1_pt_nominal }\")\n",
-    "    print(f\"events.jj_mass_nominal: {events.jj_mass_nominal}\")\n",
-    "    print(f\"events.jj_dEta_nominal: {events.jj_dEta_nominal}\")\n",
-    "    print(f\"events.nBtagLoose_nominal: {events.nBtagLoose_nominal}\")\n",
-    "    print(f\"events.nBtagMedium_nominal: {events.nBtagMedium_nominal}\")\n",
-    "    print(f\"events.njets_nominal: {events.njets_nominal}\")\n",
-    "    print(f\"not btag_cut: {~btag_cut}\")\n",
-    "    print(f\"ggH_filter: {ggH_filter}\")\n",
     "    return events[ggH_filter]\n",
     "\n",
     "def applyGGH_cutflow(events):\n",
@@ -263,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "d4bab145-d039-4710-b047-95f8210a6d9f",
    "metadata": {
     "scrolled": true
@@ -273,25 +264,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file: /depot/cms/users/yun79/hmm/copperheadV1clean/test/stage1_output/2018/data_B\n",
-      "events.jet1_pt_nominal : [74.6, 35.3, 25.6, None, 40.4, None, 32.5, 41.2, None, None, None]\n",
-      "events.jj_mass_nominal: [126, None, None, None, None, None, None, None, None, None, None]\n",
-      "events.jj_dEta_nominal: [1.44, None, None, None, None, None, None, None, None, None, None]\n",
-      "events.nBtagLoose_nominal: [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "events.nBtagMedium_nominal: [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "events.njets_nominal: [2, 1, 1, None, 1, None, 1, 1, None, None, None]\n",
-      "not btag_cut: [False, True, True, True, True, True, True, True, True, True, True]\n",
-      "ggH_filter: [False, True, True, True, True, True, True, True, True, True, True]\n",
-      "data_yield for /depot/cms/users/yun79/hmm/copperheadV1clean/test/stage1_output/2018/data_B: 10\n"
+      "file: /depot/cms/users/yun79/hmm/copperheadV1clean/test/stage1_output/2018/data_D\n",
+      "events_data.jet1_pt_nominal : [None, 41.2, 47.7, None, None, None, ..., None, None, None, 37.4, None, None]\n",
+      "events_data.jj_mass_nominal: [None, None, None, None, None, None, ..., None, None, None, 28.1, None, None]\n",
+      "events_data.jj_dEta_nominal: [None, None, None, None, None, None, ..., None, None, None, 0.721, None, None]\n",
+      "events_data.nBtagLoose_nominal: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ..., 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "events_data.nBtagMedium_nominal: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ..., 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "events_data.njets_nominal: [None, 1, 1, None, None, None, None, ..., None, None, None, None, 2, None, None]\n",
+      "data_yield for /depot/cms/users/yun79/hmm/copperheadV1clean/test/stage1_output/2018/data_D: 382375\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "np.int64(10)"
+       "np.int64(382375)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +310,7 @@
     "# cle# filelist = glob.glob(f\"{load_path}/data_F\")\n",
     "# # filelist = glob.glob(f\"{load_path}/data_*\")\n",
     "# filelist = glob.glob(f\"{load_path}/data_*\")\n",
-    "filelist = glob.glob(f\"{load_path}/data_B\")\n",
+    "filelist = glob.glob(f\"{load_path}/data_D\")\n",
     "\n",
     "# filelist = glob.glob(f\"{load_path}/dy*\")\n",
     "total_integral = 0\n",
@@ -332,9 +321,20 @@
     "    events_data = ak.zip({field: events_data[field] for field in V1_fields_2compute}).compute()\n",
     "    events_data = filterRegion(events_data, region=\"signal\")\n",
     "    # events_data = applyGGH_cutV1(events_data)\n",
-    "    events_data = applyGGH_new(events_data)\n",
-    "    # events_data = veto_ttH_VH(events_data)\n",
     "    # events_data = veto_nJetGeq3(events_data)\n",
+    "    # events_data = veto_ttH_VH(events_data)\n",
+    "    events_data = applyGGH_new(events_data)\n",
+    "    \n",
+    "    print(f\"events_data.jet1_pt_nominal : {events_data.jet1_pt_nominal }\")\n",
+    "    print(f\"events_data.jj_mass_nominal: {events_data.jj_mass_nominal}\")\n",
+    "    print(f\"events_data.jj_dEta_nominal: {events_data.jj_dEta_nominal}\")\n",
+    "    print(f\"events_data.nBtagLoose_nominal: {events_data.nBtagLoose_nominal}\")\n",
+    "    print(f\"events_data.nBtagMedium_nominal: {events_data.nBtagMedium_nominal}\")\n",
+    "    print(f\"events_data.njets_nominal: {events_data.njets_nominal}\")\n",
+    "    # print(f\"not btag_cut: {~btag_cut}\")\n",
+    "    # print(f\"ggH_filter: {ggH_filter}\")\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # events_data = applyGGH_noJetPt(events_data)\n",
     "    # events_data = applyVBF_cutV1(events_data)\n",
@@ -348,6 +348,27 @@
     "    print(f\"data_yield for {file}: {data_yield}\")\n",
     "    total_integral += data_yield\n",
     "total_integral\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e4467764-ecf9-4f37-833c-cdd6f4e12dea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(10.0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ak.max(events_data.njets_nominal)"
    ]
   },
   {
