--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -88,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1df604dbae914b6783a49c6a2c64b740",
+       "model_id": "d3c28fc5b89d4f4a8a9c203dc96fe0fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,7 +102,6 @@
    ],
    "source": [
     "cluster = gateway.new_cluster(\n",
-    "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
     "    conda_env = \"/depot/cms/kernels/root632\",\n",
     "    # conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
     "    worker_cores = 2, #2\n",
@@ -110,17 +109,25 @@
     "    env = dict(os.environ),\n",
     ")\n",
     "\n",
-    "cluster.adapt(minimum=3, maximum=80)\n",
+    "cluster.adapt(minimum=2, maximum=80)\n",
     "cluster\n",
     "# cluster.adapt(100) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d6fc0cd8-29ba-4552-b3e4-e81539318878",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ClusterReport<name=cms.2f7db2c05f8244a88cce0ec6131f68a8, status=RUNNING>\n"
+     ]
+    }
+   ],
    "source": [
     "for cluster_info in gateway.list_clusters():\n",
     "    print(cluster_info)"
